--- a/first.html
+++ b/first.html
@@ -8,17 +8,15 @@
 <body>
     <!-- ヘッダー -->
     <header>
-        ヘッダーの中身
     </header>
  
     <!-- メインコンテンツ -->
     <main>
-        メインコンテンツの中身
+        <h1>初めてのweb</h1>
     </main>
  
     <!-- フッター -->
     <footer>
-        フッターの中身
     </footer>
  
     <script
